[package]
name = "urlencoding"
version = "1.0.0"
authors = ["Bertram Truong <b@bertramtruong.com>", "Kornel <kornel@geekhood.net>"]
license = "MIT"
description = "A Rust library for doing URL percentage encoding."
repository = "https://github.com/bt/rust_urlencoding"
keywords = ["url", "encoding", "urlencoding"]
edition = "2018"
categories = ["encoding", "web-programming"]

